Update main.css to fix issue with too much space under photos in order to more accurately match the post previews

--- a/app/default-files/default-themes/simple/assets/css/main.css
+++ b/app/default-files/default-themes/simple/assets/css/main.css
@@ -122,7 +122,6 @@ hr,
 pre,
 table {
   margin-top: calc(var(--baseline) * 6 + 0.5vw);
-  margin-bottom: calc(var(--baseline) * 6 + 0.5vw);
 }
 
 h1,
